--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 helloTux 一詞來自每個學程式的人都會寫到「Hello World」，那玩 Linux 就一定會碰到 Tux，所以就會有「Hello Tux」的產生，也因這樣我們改變了世界(World → Tux) :P
 
+helloTux 中文名稱還未決定，目前有「企鵝您好」、「塔克斯您好」..
