--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-helloTux 一詞來自每個學程式的人都會寫到「Hello World」，那玩 Linux 就一定會碰到 Tux，所以就會有「Hello Tux」的產生，也因這樣我們改變了世界(World → Tux) :P
+    helloTux 一詞來自每個學程式的人都會寫到「Hello World」，那玩 Linux 就一定會碰到 Tux，所以就會有「Hello Tux」的產生，也因這樣我們改變了世界(World → Tux) :P
 
-helloTux 中文名稱還未決定，目前有「企鵝您好」、「塔克斯您好」..
+    helloTux 中文名稱還未決定，目前有「企鵝您好」、「塔克斯您好」..
+
+	在上線之前，主要會發佈至 <a href="http://jonny.ubuntu-tw.net/2011/12/apturl-on-ubuntu-1110.html" target="_blank">凍仁的 Ubuntu 筆記: AptURL on Ubuntu 11.10</a> 一文，到雛型出來後才會轉至其他地方。
